Remove validation from TensorData object
