# mlserver/types/dataplane.py
@@ -1,7 +1,7 @@
 # generated by datamodel-codegen:
 #   filename:  dataplane.yaml
 
-from typing import List, Optional
+from typing import Any, List, Optional
 
 from pydantic import BaseModel, Field
 
@@ -31,7 +31,7 @@ class Parameters(BaseModel):
 
 
 class TensorData(BaseModel):
-    __root__: List = Field(..., title="tensor_data")
+    __root__: Any = Field(..., title="tensor_data")
 
     def __iter__(self):
         return iter(self.__root__)
@@ -41,16 +41,6 @@ class TensorData(BaseModel):
 
     def __len__(self):
         return len(self.__root__)
-
-    @classmethod
-    def __get_validators__(cls):
-        yield cls.validate
-
-    @classmethod
-    def validate(cls, v):
-        if isinstance(v, dict):
-            return v.get("__root__", [])
-        return v
 
 
 class RequestOutput(BaseModel):
